<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp">
    <TextView
            android:text="@string/text_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_host"
            android:minHeight="48dp"
            android:inputType="textUri"
            android:hint="@string/texthint_host"
            android:text="@string/edit_host_initial"
            android:autofillHints="" />

    <TextView
            android:text="@string/text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp" />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/edit_username"
            android:minHeight="48dp"
            android:hint="@string/texthint_username"
            android:autofillHints="username" />

    <TextView
            android:text="@string/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp" />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edit_password"
            android:minHeight="48dp"
            android:hint="@string/texthint_password"
            android:autofillHints="password" />

    <include layout="@layout/bottom_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom" />
</LinearLayout>